fixed spacing between treat and text above

--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,7 @@ body {
   text-align: center;
   position: relative;
   padding-bottom: 20px;
+  margin-top: 40px;
 }
 
 #our-treat {
